<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:foreground="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/title_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text"
        android:paddingTop="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/login_user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding"
        android:textSize="@dimen/text"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/repository"/>

    <TextView
        android:id="@+id/name_actor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/name_repository"
        android:textSize="@dimen/large_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/number_of_forks" />

    <TextView
        android:id="@+id/as_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/asCharacter"
        android:textSize="@dimen/large_text" />

</LinearLayout>